--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -248,14 +248,14 @@ h2 {
   margin-bottom: 8px;
   font-size: 22px;
   font-weight: bold;
-  color: #303030;
+  color: ##0ac7d1;
 }
 
 h3 {
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: bold;
-  color: #d5000d;
+  color: ##0ac7d1;
 }
 
 h4 {
