--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -72,7 +72,7 @@ header h1 {
   font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 48px; font-weight: 900;
   line-height: 1.2;
-  color: #303030;
+  color: #0ac7d1;
   letter-spacing: -1px;
 }
 
@@ -248,14 +248,14 @@ h2 {
   margin-bottom: 8px;
   font-size: 22px;
   font-weight: bold;
-  color: ##0ac7d1;
+  color: #0ac7d1;
 }
 
 h3 {
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: bold;
-  color: ##0ac7d1;
+  color: #0ac7d1;
 }
 
 h4 {
