--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -72,7 +72,7 @@ header h1 {
   font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 48px; font-weight: 900;
   line-height: 1.2;
-  color: #0ac7d1;
+  color: #7D7D7D;
   letter-spacing: -1px;
 }
 
@@ -261,17 +261,17 @@ h3 {
 h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #303030;
+  color: #0ac7d1;
 }
 
 h5 {
   font-size: 1em;
-  color: #303030;
+  color: #0ac7d1;
 }
 
 h6 {
   font-size: .8em;
-  color: #303030;
+  color: #0ac7d1;
 }
 
 p {
